--- a/app/globals.css
+++ b/app/globals.css
@@ -36,7 +36,7 @@ body {
   }
 
   .padding-container {
-    @apply px-6 lg:px-20 3xl:px-0;
+    @apply px-6 lg:px-20 text-3xl md:px-0;
   }
 
   .flexCenter {
